# CMakeLists-Examples

01单文件/: CMakeLists.txt
02头文件/: CMakeLists.txt
03静态库/: CMakeLists.txt
04共享库/: CMakeLists.txt
05多文件/: CMakeLists.txt
05多文件/lib/: CMakeLists.txt
05多文件/src/: CMakeLists.txt
06多文件/lib/: CMakeLists.txt
06多文件/lib/src/: Hello.cpp
07多文件/: CMakeLists.txt
07多文件/lib/lib01/: CMakeLists.txt
07多文件/lib/lib02/: CMakeLists.txt
07多文件/src/: CMakeLists.txt  main.cpp
